@@ -132,6 +132,7 @@
   </widget>
   <widget class="Gtk.Dialog" id="Monodoc.Editor.OpenDocDialog" design-size="629 448">
     <property name="MemberName" />
+    <property name="Title" translatable="yes">File to Open</property>
     <property name="WindowPosition">CenterOnParent</property>
     <property name="Buttons">2</property>
     <property name="HelpButton">False</property>
@@ -199,8 +200,9 @@
       </widget>
     </child>
   </widget>
-  <widget class="Gtk.Dialog" id="Monodoc.Editor.SaveDocDialog" design-size="779 599">
+  <widget class="Gtk.Dialog" id="Monodoc.Editor.SaveDocDialog" design-size="703 178">
     <property name="MemberName" />
+    <property name="Title" translatable="yes">Save as...</property>
     <property name="WindowPosition">CenterOnParent</property>
     <property name="Buttons">2</property>
     <property name="HelpButton">False</property>
